fixed autocomplete chips 2px spacing

--- a/src/app/styles/includes/styles.scss
+++ b/src/app/styles/includes/styles.scss
@@ -697,8 +697,9 @@ md-input-container.md-input-has-value label {
 
 md-chips-autocomplete-container {
 	.md-chips {
-		padding: 0 0 0 3px;
-		font-size: inherit;
+		padding: 0;
+	    font-size: inherit;
+	    margin: 0 -2px 0 2px;
 		md-chip-wrap {
 			font-size: inherit;
 		}
